# micrograd

./: README.md  pyproject.toml
src/micrograd/core/: layer.py  mlp.py  module.py  neuron.py  typing.py  value.py
