[tool.poetry]
name = "micrograd"
version = "0.1.0"
description = "NN simplified using scalar operations (based on Andrej Karpathy's project"
packages = [{ include = "micrograd", from = "src" }]
authors = []

readme = "README.md"
include = [
    "README.md",
    "LICENSE.txt",
    "src/micrograd/py.typed",
]
exclude = [
    "*.so",
    "*.pyc",
    "*~",
    "#*",
    ".git*",
    ".coverage*",
    "DS_Store",
    "__pycache__",
]


[tool.poetry.dependencies]
python = ">=3.8.1, <=3.11"
numpy = ">=1.24, <1.25"
matplotlib = "^3.7.2"
graphviz = "^0.20.1"
varname = "^0.11.2"
torch = "^2.0.1"


[tool.poetry.dev-dependencies]
# type hints
mypy = "1.3.0"
# formatting
black = "23.7.0"
# linting
ruff = "0.0.269"
# import sorting
isort = "5.12.0"
# testing
pytest = "7.3.1"
pytest-sugar = "0.9.7"
# on-demand environments
nox = "2023.4.22"
nox-poetry = "1.0.2"
# jupyter
ipykernel = "^6.24.0"

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_no_return = false
allow_untyped_defs = true
allow_untyped_decorators = true

[[tool.mypy.overrides]]
module = "graphviz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "varname.*"
ignore_missing_imports = true


[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = ["micrograd"]
order_by_type = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
